# browser

./: .gitignore  .gitmodules  README.md
core/: CMakeLists.txt  vcpkg.json
core/include/core/: BrowserCore.h  Errors.h  Identifier.h  Tab.h  Timestamp.h  Url.h  eventArgs.h  models.h  types.h
core/include/core/interfaces/: IBrowserCore.h  ICoreDispatcher.h
core/src/: BrowserCore.cpp  BrowserCore.h
core/src/domain/: HistoryItem.cpp  HistoryItem.h  InternalErrors.h  Tab.h  TabHistory.h  Timestamp.cpp  Url.cpp  types.cpp
core/src/interfaces/: IBookmarksRepository.h  IHistoryRepository.h
core/src/services/bookmarks/: BookmarkService.cpp  BookmarkService.h
core/src/services/history/: HistoryService.cpp  HistoryService.h
core/src/services/tabs/: Tab.cpp  TabHistory.cpp  TabIdGenerator.cpp  TabIdGenerator.h  TabManager.cpp  TabManager.h
core/src/storage/: DatabaseManager.cpp  DatabaseManager.h  IHistoryRepository.h
core/src/storage/repositories/: BookmarkRepository.cpp  BookmarkRepository.h  HistoryRepository.cpp  HistoryRepository.h
core/src/storage/sql/: init.sql
core/src/util/: util.cpp  util.h
desktop/: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
desktop/adapter/: CoreAdapter.cpp  CoreAdapter.h
desktop/binder/: AppBinder.h
desktop/controllers/: BookmarkController.cpp  BookmarkController.h  HistoryController.cpp  HistoryController.h  MainWindowController.cpp  MainWindowController.h  TabsController.cpp  TabsController.h
desktop/models/: UIContext.cpp  UIContext.h  bookmarkmodel.cpp  bookmarkmodel.h  historymodel.cpp  historymodel.h  tabsmodel.cpp  tabsmodel.h
desktop/ui/: bookmarkdelegate.cpp  bookmarkdelegate.h  bookmarkspage.cpp  bookmarkspage.h  browsermenu.cpp  browsermenu.h  historydelegate.cpp  historydelegate.h  historypage.cpp  historypage.h  mainwindow.cpp  mainwindow.h  searchbar.cpp  searchbar.h  style.css  tabbaritem.cpp  tabbaritem.h  tabbarwithcontrol.cpp  tabbarwithcontrol.h  tabdelegate.cpp  tabdelegate.h  webenginepage.cpp  webenginepage.h
desktop/util/: util.cpp  util.h
